add category to miniapps
